mdapipkg/unpackaged/objects/Label_And_Value__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_id__c</fullName>
        <label>Library id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_E__c</fullName>
        <label>S&amp;E</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Label And Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Label And Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Label And Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>